Revision history for Module-Installed

1.02 UNREL
        - Fix badge links in POD

1.01    2020-12-07
        - Change ordering of fail situations (Testers were failing)

1.00    2020-12-07
        First version, released on an unsuspecting world.
